add videos infos, fix search results crash

--- a/dailymotion.html
+++ b/dailymotion.html
@@ -33,6 +33,7 @@
         <video id="video_dailymotion" width="668" height="400" controls="controls"><source src="" type="video/mp4" /></video>
     </div>
     <div id="loading" style="display:None;"><img style="width:28px;height:28px;"src="images/spinner.gif" /> Loading videos...</div>
+    <div id="search_results"></div>
     <div id ="items_container"></div>
     <div id="pagination">
         <a class="back"><img id="next" src="images/back.png" /><span>Back</span></a>
