--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>ht5Streamer</title>
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="text/javascript" src="js/config.js"></script>
 <link rel="stylesheet" href="css/main.css" />
 </head>
 <body class="black">
+    <input style="display:none;" id="fileDialog" type="file" nwdirectory />
     <div id="home">
         <h1>Ht5streamer</h1>
         <p>This software allows you to stream videos or sounds from different websites replacing flashplayer by a full html5 player with playlist and full screen if necessary.<br /><br />
