--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="css/main.css" />
 </head>
 <body class="black">
-    <input style="display:none;" id="fileDialog" type="file" nwdirectory />
+    <input style="display:none;" id="fileDialog" title="Download" name="Download" type="file" nwdirectory />
     <div id="home">
         <h1>Ht5streamer</h1>
         <p>This software allows you to stream videos or sounds from different websites replacing flashplayer by a full html5 player with playlist and full screen if necessary.<br /><br />
