--- a/youtube.html
+++ b/youtube.html
@@ -4,6 +4,7 @@
 <title>ht5-Youtube</title>
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script type="text/javascript" src="js/youtube.js"></script>
+<script type="text/javascript" src="js/config.js"></script>
 <script type="text/javascript" src="js/mediaelement/build/mediaelement-and-player.js"></script>
 <link rel="stylesheet" href="js/mediaelement/build/mediaelementplayer.css" />
 <link rel="stylesheet" href="css/main.css" />
