can now resize video player dynamically

--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
             <div id="items_container"></div>
         </div>
         <div id="right">
-            <div id="player">
-                <video id="video_player" width="609" height="547" controls="controls"><source src="" type="video/mp4" /></video>
-            </div>
+                <video width="100%" height="100%" src="mymedia.mp4"></video>
         </div>
     </div>
 </body>
