fix download dir dialog

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
+    <input style="display:none;" id="fileDialog" type="file" nwdirectory />
     <div id="menu">
         <div id="engines" class="space">
             <label>Engine:</label>
@@ -58,7 +59,7 @@
             <div id="items_container"></div>
         </div>
         <div id="right">
-                <video width="100%" height="100%" src="mymedia.mp4"></video>
+                <video width="100%" height="100%" src="t.mp4"></video>
         </div>
     </div>
 </body>
