add filters, add keyevents

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript" src="js/mediaelement/build/mediaelement-and-player.js"></script>
+<script type="text/javascript" src="js/DOMEventsLevel3.shim.min.js"></script>
 <link rel="stylesheet" href="js/mediaelement/build/mediaelementplayer.css" />
 <link rel="stylesheet" href="css/main.css" />
 </head>
