add related videos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript" src="js/mediaelement/build/mediaelement-and-player.js"></script>
 <script type="text/javascript" src="js/DOMEventsLevel3.shim.min.js"></script>
+<script type="text/javascript" src="js/expand.js"></script>
+<script type="text/javascript" src="js/contextmenu.js"></script>
 <link rel="stylesheet" href="js/mediaelement/build/mediaelementplayer.css" />
 <link rel="stylesheet" href="css/main.css" />
 </head>
