add full pagination system

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 <script type="text/javascript" src="js/DOMEventsLevel3.shim.min.js"></script>
 <script type="text/javascript" src="js/expand.js"></script>
 <script type="text/javascript" src="js/contextmenu.js"></script>
+<script type="text/javascript" src="js/pagination/jquery.simplePagination.js"></script>
+<script type="text/javascript" src="js/pagination.js"></script>
 <link rel="stylesheet" href="js/mediaelement/build/mediaelementplayer.css" />
 <link rel="stylesheet" href="css/main.css" />
+<link rel="stylesheet" href="js/pagination/simplePagination.css" />
 </head>
 <body>
     <input style="display:none;" id="fileDialog" type="file" nwdirectory />
