--- a/config.html
+++ b/config.html
@@ -14,8 +14,10 @@
 
 <body>
     <input style="display:none;" id="fileDialog" type="file" nwdirectory />
-    <h1>Ht5streamer configuration:</h1>
+    <h1 id="config_title"></h1>
     <div id="main_config">
     </div>
+    <br />
+    <p id="version" class="list-divider"></p>
 </body>
 </html>
