--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 <script type="text/javascript" src="js/expand.js"></script>
 <script type="text/javascript" src="js/contextmenu.js"></script>
 <script type="text/javascript" src="js/pagination/jquery.simplePagination.js"></script>
-<script type="text/javascript" src="js/pagination.js"></script>
-<link rel="stylesheet" href="js/mediaelement/build/mediaelementplayer.css" />
+<script src='js/bongo.min.js'></script>
+<script type="text/javascript" src="js/ht5db.js"></script>
+<script src='js/jstree/jquery.jstree.js'></script>
+<script src='js/ht5playlist.js'></script>
+<script type="text/javascript" src="js/tabs.js"></script>
 <link rel="stylesheet" href="css/main.css" />
+<link rel="stylesheet" href="js/mediaelement/build/mediaelementplayer.css" />
+<link rel="stylesheet" href="css/tabs.css" />
 <link rel="stylesheet" href="js/pagination/simplePagination.css" />
 </head>
 <body>
