--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <script src='js/ht5playlist.js'></script>
 <script type="text/javascript" src="js/tabs.js"></script>
 <script type="text/javascript" src="js/expand.js"></script>
+<script type="text/javascript" src="js/x2js/xml2json.js"></script>
 <link rel="stylesheet" href="css/main.css" />
 <link rel="stylesheet" href="js/mediaelement/build/mediaelementplayer.css" />
 <link rel="stylesheet" href="css/tabs.css" />
