add freebox airplay support (only in france)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <script type="text/javascript" src="js/mediaelement/build/mediaelement-and-player.js"></script>
 <script type="text/javascript" src="js/DOMEventsLevel3.shim.min.js"></script>
 <script type="text/javascript" src="js/contextmenu.js"></script>
+<script type="text/javascript" src="js/tiptip/jquery.tipTip.js"></script>
 <script type="text/javascript" src="js/pagination/jquery.simplePagination.js"></script>
 <script src='js/bongo.min.js'></script>
 <script type="text/javascript" src="js/ht5db.js"></script>
@@ -15,7 +16,9 @@
 <script type="text/javascript" src="js/tabs.js"></script>
 <script type="text/javascript" src="js/expand.js"></script>
 <script type="text/javascript" src="js/x2js/xml2json.js"></script>
+<script type="text/javascript" src="js/airmedia.js"></script>
 <link rel="stylesheet" href="css/main.css" />
+<link rel="stylesheet" href="js/tiptip/tipTip.css" />
 <link rel="stylesheet" href="js/mediaelement/build/mediaelementplayer.css" />
 <link rel="stylesheet" href="css/tabs.css" />
 <link rel="stylesheet" href="js/pagination/simplePagination.css" />
