add update and notifications systems

--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
 <script type="text/javascript" src="js/expand.js"></script>
 <script type="text/javascript" src="js/x2js/xml2json.js"></script>
 <script type="text/javascript" src="js/airmedia.js"></script>
+<script type="text/javascript" src="js/jquery.notif.min.js"></script>
+<script type="text/javascript" src="js/notify.js"></script>
+<script type="text/javascript" src="js/mustache.js"></script>
 <link rel="stylesheet" href="css/main.css" />
 <link rel="stylesheet" href="js/tiptip/tipTip.css" />
 <link rel="stylesheet" href="js/mediaelement/build/mediaelementplayer.css" />
 <link rel="stylesheet" href="css/tabs.css" />
 <link rel="stylesheet" href="js/pagination/simplePagination.css" />
+<link rel="stylesheet" href="css/notif.css" />
+<link rel="stylesheet" href="css/pictogram-button.css" />
 </head>
 <body>
     <input style="display:none;" id="fileDialog" type="file" nwdirectory />
