--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 <body>
     <input style="display:none;" id="fileDialog" type="file" nwdirectory />
     <div id="main">
-      
+        
     </div>
+    <p id="loadingApp" style="font-weight:bold;display:none;top:48%;position:relative;left:50%;width:250px;margin-left:-125px;"></p>
 </body>
 </html>
