--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <script type="text/javascript" src="js/notify.js"></script>
 <script type="text/javascript" src="js/mustache.js"></script>
 <script type="text/javascript" src="js/mobile-detect.js"></script>
-<script type="text/javascript" src="js/streamtor.js"></script>
-<!--<script type="text/javascript" src="js/flix.js"></script>-->
+<!--<script type="text/javascript" src="js/streamtor.js"></script>-->
+<script type="text/javascript" src="js/flix.js"></script>
 <link rel="stylesheet" href="css/main.css" />
 <link rel="stylesheet" href="css/split-pane.css" />
 <link rel="stylesheet" href="js/tiptip/tipTip.css" />
