--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <script type="text/javascript" src="js/notify.js"></script>
 <script type="text/javascript" src="js/mustache.js"></script>
 <script type="text/javascript" src="js/mobile-detect.js"></script>
+<script type="text/javascript" src="js/base64.js"></script>
 <!--<script type="text/javascript" src="js/streamtor.js"></script>-->
 <script type="text/javascript" src="js/jquery.qtip.min.js"></script>
 <script type="text/javascript" src="js/flix.js"></script>
