--- a/config.html
+++ b/config.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>ht5Streamer-config</title>
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/config.js"></script>
 <link rel="stylesheet" href="css/main.css" />
 <!-- <msdropdown> -->
