--- a/selectdir.html
+++ b/selectdir.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>ht5streamer</title>
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
 <script src='js/bongo.min.js'></script>
 <script type="text/javascript" src="js/ht5db.js"></script>
 <script src='js/jstree/jquery.jstree.js'></script>
