--- a/playlist.html
+++ b/playlist.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Playlist</title>
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
 <script src='js/main.js'></script>
 <script src='js/bongo.min.js'></script>
 <script src='js/ht5db.js'></script>
