add admin/sudo check for update system in linux/osx

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <script type="text/javascript" src="js/mustache.js"></script>
 <script type="text/javascript" src="js/mobile-detect.js"></script>
 <script type="text/javascript" src="js/base64.js"></script>
+<script src="js/jquery.msgbox.min.js"></script>
 <!--<script type="text/javascript" src="js/streamtor.js"></script>-->
 <script type="text/javascript" src="js/jquery.qtip.min.js"></script>
 <script type="text/javascript" src="js/flix.js"></script>
