--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script type="text/javascript" src="js/tabs.js"></script>
 <script type="text/javascript" src="js/expand.js"></script>
 <script type="text/javascript" src="js/x2js/xml2json.js"></script>
-<!--<script type="text/javascript" src="js/airmedia.js"></script>-->
+<script type="text/javascript" src="js/airmedia.js"></script>
 <script type="text/javascript" src="js/jquery.notif.min.js"></script>
 <script type="text/javascript" src="js/notify.js"></script>
 <script type="text/javascript" src="js/mustache.js"></script>
